[package]
name = "flashy64"
version = "0.1.0"
edition = "2021"


[dependencies]
libftd2xx = { version = "0.32", features = ["static"] }
bytes = "1.1"
crc = "2.1"
log = "0.4"
lazy_static = "1.4"
md5 = "0.7"

env_logger = { version = "0.9", optional = true }
clap = { version = "3.1", optional = true }

[features]
build-binary = ["clap", "env_logger"]

[[bin]]
name = "flashy64"
required-features = ["build-binary"]