[package]
name = "flashy64"
version = "0.2.0"
edition = "2021"
authors = ["Luke Stadem <bigbass1997.website@gmail.com>"]
description = "CLI tool for interfacing with N64 flashcarts."
license = "MIT"
repository = "https://github.com/bigbass1997/flashy64"
keywords = ["n64", "flashcart", "rom"]
categories = ["command-line-utilities", "development-tools", "game-development"]

[dependencies]
flashy64-backend = { path = "./flashy64-backend", version = "0.1.0" }
log = "0.4"
env_logger = "0.9"
bpaf = { version = "0.7", features = ["derive"] }
crossterm = "0.23"

[workspace]
members = [
    "flashy64-backend"
]
